kn/static/media/style/home.css
#random-text,
#slider-wrapper {
	max-width: 475px;
	float: left;
}
#agenda-wrapper {
	margin-left: 525px;
}
@media screen and (max-width: 850px) {
	#random-text,
	#slider-wrapper {
		float: none; /* initial */
	}
	#random-text {
		max-width: none; /* initial */
	}
	#agenda-wrapper {
		margin-left: 0; /* initial */
		margin-bottom: 26px;
	}

	/* reverse the order of agenda and slider
	 * Only some browsers support this, but the rest will simply ignore it. */
	#body {
		display: -webkit-flex;
		display: flex;
		-webkit-flex-direction: column;
		flex-direction: column;
	}
	#slider-wrapper {
		-webkit-order: 1;
		order: 1;
	}
}
}

/* photoslider properties */
.nivoSlider {
	z-index: 0;
}
.nivoSlider img {
	border-radius: 4px;
	/* reset properties used for normal images */
	padding: 0 !important;
	border: 0 !important;
	background-color: transparent !important;
	margin: 0 !important;
}
/* This prevents strange resizes in Internet Explorer
 * See http://stackoverflow.com/a/15073788 */
.nivo-main-image {
	height: auto;
}

